--- a/proyecto.css
+++ b/proyecto.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 body {
+    font-size: 1em;
     font-family: 'Montserrat', sans-serif;
 }
 a {
@@ -54,12 +55,13 @@ header {
 
 }
 .presentacion {
-    padding: 150px;
+    /* padding: 150px; */
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     min-height: calc(100vh - 90px);
+    padding: 110px 40px 130px;
 }
 .imagen { 
     max-width: 500px;
@@ -86,13 +88,17 @@ img {
 .h2 {
     font-size: 30px;
     color: rgb(46, 45, 45);
+    margin-top: 0;
+    margin-bottom: 5px;
+    font-weight: 800;
 }
 
 .h3 {
-    font-size: 20px;
+    font-size: 16px;
     color: rgb(43, 42, 42);
     font-weight: lighter;
-    line-height: 2.5;
+    line-height: 1.4;
+    margin-bottom: 40px;
 }
 .boton {
     background-color: #613809;
@@ -119,6 +125,7 @@ img {
 }
 p {
     margin: 14px;
+    line-height: 1.4;
 }
 .contenedor-tarjetas {
     margin-top: 40px;
@@ -147,12 +154,15 @@ div.icono1 {
     padding: 30px;
     font-size: 70px;
 }
-.contenedor-cita {
-    height: 500px;
+.seccion-cita {
+    display: flex;
+    justify-content: center;
+    padding: 110px 40px 130px;
     text-align: center;
     background-color: #c28847;
-    padding: 130px;
-    line-height: 3;
+}
+.contenedor-cita {
+    line-height: 1.4;
 }
 div.icono2 {
     font-size: 100px;
@@ -163,9 +173,10 @@ div.icono2 {
     background-color: white;
 }
 .contenedor-proyecto  {
-    margin: 40px;
+    margin-top: 40px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    flex-wrap: wrap;
 
 }
 .proyecto:hover {
@@ -186,28 +197,45 @@ div.icono2 {
 }
 .contenedor-formulario {
     background-color: #f6f7fb;
-    padding: 200px 120px 120px 120px;
+    padding-top: 200px;
 }
 .mi-formulario {
     display: flex;
     background-color: #ffffff;
     border-radius: 15px;
     border: 1px solid #e0e0e0;
-    padding: 80px 30px 80px 30px;
-    justify-content: space-around;
+    padding: 110px 40px 130px;
     line-height: 2.5;
 }
 .p1 {
     margin: 0;
 }
 .redes {
-    justify-content: center;
+    /* display: flex;
+    align-items: center;
+    padding: 5px 10px;
+    border-radius: 100px;
     line-height: 3;
+    margin-top: 40px ; */
+    margin-top: 40px
 }
 .datos {
     font-weight: bold;
     display: flex;
     flex-direction: column;
+}
+.nombre-apellido {
+    display: flex;
+}
+.icono3 {
+    display: flex;
+    margin: 5px 0;
+}
+.usuarios {
+    display: flex;    
+    align-items: center;    
+    padding: 5px 10px;    
+    border-radius: 100px
 }
 .icono3 i {
     margin-left: 10px;
@@ -245,7 +273,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 80px;
+    padding: 80px 20px 60px;
 }
 .nav-pie {
     display: block;
@@ -256,16 +284,21 @@ footer {
 }
 ul {
     list-style: none;
+    padding: 0;
+}
+ul li {
+    line-height: 1.4;
 }
 .pie-menu {
     margin: 0 10px;
+    font-size: 14px;
 }
 .contenedor-iconos {
     display: flex;
     margin: 30px;
 }
 .icono-pie i {
-    font-size: 20px;
+    /* font-size: 20px; */
     background-color: #e9ac67;
     border-radius: 50%;
     padding: 10px;
@@ -279,39 +312,62 @@ ul {
     box-shadow: 0px 0px 10px 0px #e9ac67 ;
 }
 @media(max-width:1100px){
-    /* header {padding: 25px 20px;} */
-    .presentacion {background-color: aqua;
-        flex-direction: column;}
+    .presentacion {flex-direction: column;}
+    .textos {
+        align-items: center;
+        text-align: center;}
+    .imagen {margin-top: 30px;}
 
-    .textos {flex-direction: column;}
+}
+@media(max-width:900px) {
+    .mi-formulario {flex-direction: column;
+    padding: 0 40px 120px;
+    border: 0;}
+    /* .redes {display: flex;
+    flex-wrap: wrap;} */
+    .contenedor-formulario {width: 100%;
+        margin-bottom: 40px;}
+        /* display: flex;
+        flex-wrap: wrap;} */
+    .formulario {display: flex;
+        flex-wrap: wrap;}
 }
 @media(max-width:800px) {
-    .presentacion {background-color: gray ;}
     .presentacion {flex-direction: column;}
     .textos {flex-direction: column;}
-    .h1-1 {font-size: 50px;}
+    .h1-1, .h1-2, .h1-3, .h1-4 {font-size: 50px;}
     .h2 {font-size: 30px;} 
     .boton {font-size: 15px;}
 }
 @media(max-width:750px) {
-    .nav-menu {display: none;}
+    .nav-menu, .nav-pie {display: none;}
     .abrir-menu {display: flex;}
-    /* .presentacion {padding: 0;} */
+    .presentacion {padding: 80px 20px;}
+
 }
 @media(max-width:600px){
-    .presentacion {background-color: rgb(242, 0, 255);}
     .presentacion {flex-direction: column;}
     .textos {flex-direction: column;}
-    .h1-1, .h1-2 {font-size: 40px;}
+    .h1-1, .h1-2, .h1-3, .h1-4 {font-size: 45px;}
     .h2 {font-size: 20px;} 
     .boton {font-size: 10px;}
-    .contenedor-tarjetas {flex-direction: column;}
+}
+@media(max-width:500){
+    .icono3 {width: 100%;
+        margin: 0;
+        margin-bottom: 10px;}
+    .usuarios {width: 100%;
+        margin: 0;
+        margin-bottom: 10px}
 }
 @media(max-width:400px){
     .presentacion {flex-direction: column;}
     .textos {flex-direction: column;}
-    .presentacion {background-color: rgb(30, 255, 0);}
-    .h1-1, .h1-2 {font-size: 30px;}
+    .h1-1, .h1-2, .h1-3, .h1-4 {font-size: 40px;}
     .h2 {font-size: 15px;}
     .boton {font-size: 5px;}
-} 
+    .contenedor-formulario {background-color: white;
+        padding: 20px 20px 20px 9px;}
+    .nombre-apellido {flex-direction: column;}
+    .mi-formulario {padding: 20px 20px 20px 0;}
+}
