--- a/proyecto.css
+++ b/proyecto.css
@@ -17,8 +17,6 @@ a:hover {
 
 header {
     width: 100%;
-    /* height: 90px; */
-    /* margin-top: 90px; */
     padding: 25px 20px;
     background-color: white;
     box-shadow: 0px 0px 29px 0px rgb(219, 214, 214) ;
@@ -26,10 +24,7 @@ header {
     justify-content: flex-end;
     align-items: center;
     font-family: 'Montserrat', sans-serif;
-    /* padding-right: 100px; */
-
-}
-.menu {
+    position: fixed;
 }
 .nav-menu {
     margin-top: 90px;
@@ -59,7 +54,6 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    min-height: calc(100vh - 90px);
     padding: 110px 40px 130px;
 }
 .imagen { 
@@ -205,17 +199,12 @@ div.icono2 {
     border: 1px solid #e0e0e0;
     padding: 110px 40px 130px;
     line-height: 2.5;
+    justify-content: center;
 }
 .p1 {
     margin: 0;
 }
 .redes {
-    /* display: flex;
-    align-items: center;
-    padding: 5px 10px;
-    border-radius: 100px;
-    line-height: 3;
-    margin-top: 40px ; */
     margin-top: 40px
 }
 .datos {
@@ -297,7 +286,6 @@ ul li {
     margin: 30px;
 }
 .icono-pie i {
-    /* font-size: 20px; */
     background-color: #e9ac67;
     border-radius: 50%;
     padding: 10px;
@@ -322,12 +310,8 @@ ul li {
     .mi-formulario {flex-direction: column;
     padding: 0 40px 120px;
     border: 0;}
-    /* .redes {display: flex;
-    flex-wrap: wrap;} */
     .contenedor-formulario {width: 100%;
         margin-bottom: 40px;}
-        /* display: flex;
-        flex-wrap: wrap;} */
     .formulario {display: flex;
         flex-wrap: wrap;}
 }
